fix: dark mode pixel borders invisible and badge text color

--- a/scss/base/dark-mode.scss
+++ b/scss/base/dark-mode.scss
@@ -1,3 +1,8 @@
+// stylelint-disable custom-property-pattern
+$dark-border-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="8"><path d="M3 1h2v1H3zM2 2h1v1H2zM5 2h1v1H5zM1 3h1v3H1zM6 3h1v3H6zM2 6h1v1H2zM5 6h1v1H5zM3 7h2v1H3z" fill="rgb(255,255,255)"/></svg>');
+$dark-border-compact-url: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="5" height="5"><path d="M2 1h1v1H2zM1 2h1v1H1zM3 2h1v1H3zM2 3h1v1H2z" fill="rgb(255,255,255)"/></svg>');
+// stylelint-enable custom-property-pattern
+
 @media (prefers-color-scheme: dark) {
   :root {
     --8bit-base-color: #fff;
@@ -13,6 +18,11 @@
 
     --8bit-btn-disabled-bg: #495057;
     --8bit-btn-disabled-shadow: #6c757d;
+
+    // stylelint-disable custom-property-pattern
+    --8bit-border-url: #{$dark-border-url};
+    --8bit-border-compact-url: #{$dark-border-compact-url};
+    // stylelint-enable custom-property-pattern
   }
 }
 
@@ -31,4 +41,9 @@
 
   --8bit-btn-disabled-bg: #495057;
   --8bit-btn-disabled-shadow: #6c757d;
+
+  // stylelint-disable custom-property-pattern
+  --8bit-border-url: #{$dark-border-url};
+  --8bit-border-compact-url: #{$dark-border-compact-url};
+  // stylelint-enable custom-property-pattern
 }
