--- a/scss/elements/badges.scss
+++ b/scss/elements/badges.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   padding: 2px 6px;
   font-size: 0.6rem;
-  color: var(--8bit-color-white);
+  color: var(--8bit-bg-color);
   background-color: var(--8bit-base-color);
   vertical-align: middle;
 
